//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.credentials;

import "google/protobuf/any.proto";

// TODO(burdon): Use default from codec-protobuf
message Message {
  required google.protobuf.Any payload = 1;
}

//
// A key which includes its parent keys and SignedMessages leading back to the root of its authority.
// For example, if IdentityA signed for DeviceA, which signed for DeviceB, which signed for DeviceC the chain
// would comprised: DeviceC->DeviceB->DeviceA->IdentityA moving from tip to root.
//
message KeyChain {
  required bytes publicKey = 1;
  required SignedMessage message = 2;
  repeated KeyChain parents = 3;
}

//
// A generic container message used whenever messages are signed (e.g. PartyCredential)
//
message SignedMessage {
  //
  // Provides the common metadata needed for all signed objects.
  //
  message Signed {
    required string created = 1;                         // RFC-3339 datetime string.
    required bytes nonce = 2;
    required google.protobuf.Any payload = 10;           // The payload to be signed.
  }

  //
  // The signature data itself.
  //
  message Signature {
    required bytes key = 1;                       // The publicKey of the keypair that made this signature.
    required bytes signature = 2;                 // The bytes of the signature.
    KeyChain keyChain = 3;                        // Optional. The certification chain of SignedMessages for this key.
  }

  required Signed signed = 1;                     // The signed message contents.
  repeated Signature signatures = 2;              // An array of Signatures, one for each key that signed the message.
}
